--- a/Udemy/frontend/src/templates/admin/form_add_noticias.template.html
+++ b/Udemy/frontend/src/templates/admin/form_add_noticias.template.html
@@ -3,15 +3,31 @@
 
   <form action="">
     <label for="titulo">Título</label>
-    <input type="text" name="titulo" id="titulo" placeholder="Título da notícia" v-model="titulo">
+    <input type="text" name="titulo" id="titulo" placeholder="Título da notícia" v-model="model.titulo">
+    <div v-if="!model.titulo">Título é obrigatório</div>
+    <br>
 
-    <hr>
+    <label for="resumo">Resumo</label>
+    <input type="text" name="resumo" id="resumo" cols="30" rows="5" v-model="model.resumo"></textarea>
+    <div v-if="!model.resumo">Resumo é obrigatório</div>
+    <div v-if="model.resumo && (model.resumo.length < 10 || model.resumo.length > 100)">Resumo deve conter entre 10 e 100 caracteres</div>
+    <br>
+
+    <label for="autor">Nome do autor</label>
+    <input type="text" name="autor" id="autor" cols="30" rows="5" v-model="model.autor"></textarea>
+    <div v-if="!model.autor">Autor é obrigatório</div>
+    <br>
+
+    <label for="data_noticia">Data dos fatos</label>
+    <input type="date" name="data_noticia" id="data_noticia" cols="30" rows="5" v-model="model.data_noticia"></textarea>
+    <div v-if="!model.data_noticia">Data é obrigatória</div>
+    <br>
 
     <label for="noticia">Notícia</label>
-    <textarea name="noticia" id="noticia" cols="30" rows="5" v-model="noticia"></textarea>
+    <textarea name="noticia" id="noticia" cols="30" rows="5" v-model="model.noticia"></textarea>
+    <div v-if="!model.noticia">Notícia é obrigatório</div>
+    <br>
 
-    <hr>
-
-    <input type="button" value="Enviar" v-on:click="Enviar">
+    <input type="button" value="Enviar" v-on:click="Enviar" v-if="Validate()">
   </form>
 </div>
